# Appatcher

./: .gitignore  README.rst  app.py  pyproject.toml
appatcher/music/: player.py
appatcher/patcher/: patch.py
appatcher/ui/: main.py
tests/: test_appatcher.py
