[tool.poetry]
name = "Appatcher"
version = "0.0.1"
description = ""
authors = ["c@t <c@t.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.1.1"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
